# oceanus

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  oceanus.code-workspace
src/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.runtime  Makefile
src/.sqlx/: query-0513f703ec3bce37582d4e2e2b088dc2e577ab04bd7cb64e7076f8e21d87536c.json  query-0d425c94e372e8aad2ebe9007007802e2040ffd3fba71a613a60f7470839d8c1.json  query-34143f40d451c02ab4b8ffa03554d046ea7dee7162be567d98bca6484260c092.json  query-40002d44540032b6c1063ba4e30ca0d624b0f0156240ecf0085cbaf8b09f6648.json  query-4995756112ed2112f4cedb869467f6ef7b0b7ff4f978a9ec02555a4ea7e9d89d.json  query-69d40994073e4ea9517d3f2ca6db3a47cbd7e6dbbdb7a88b5e6671d093cce059.json  query-6d4f3dccf69dcf3fea5d4469cb61b41a04ede2f075626fd1ae7a0c86eebe7685.json  query-7c49ab0815e976bb842445de6ae4651a26740a72692a9f7d4670e714d0ff1bf8.json  query-8b3b65f646c6d4011a1c488e398e986264b49142c534df49be5b0901528988bc.json  query-9c262dfba27199d6c6dcd7d3405fc7aa557e8b61b86b9c526831fe6bda1016d9.json  query-aaf1009d1fef18f7ca227abd2d6351cb5153b5a29e99bfa7a7388b26c8faf209.json  query-c391bbf934ee44caa1f9f3dcc801f9c6ab2041b4ea099217657a53df914c84c9.json  query-c39a621c5a66ba950d569a093dec9de2f1b62200d113b917093eec12682be6ab.json  query-cc91b22e7d033e24ab128fc4e1abad16eae15511e797301778d308b64f7b042f.json  query-d0539e3212669b31dbcb09f43a66ead633c2146050d10c36c7fdd9d334216a96.json  query-f44584085c80731b0c7cec64d937759dade947e7ffedaa8210b29bf3c8002b77.json  query-fa3a31775aa62214925b9c63cd41a183aea7369dc3caa6b07cd2791e6fe4cd29.json
src/dicom-lib/: Cargo.toml  Makefile
src/dicom-lib/src/: constants.rs  core.rs  dictionaries.rs  errors.rs  file.rs  lib.rs  network.rs
src/dicom-lib/src/constants/: sop_class_uids.rs  specific_character_sets.rs  transfer_syntax_uids.rs
src/dicom-lib/src/core/: data_element.rs  data_set.rs  encoding.rs  tag.rs  value.rs
src/dicom-lib/src/core/data_element/: vr.rs
src/dicom-lib/src/core/data_set/: constants.rs  element_in_data_set.rs  reader.rs
src/dicom-lib/src/core/value/: specific_character_set.rs  value_representations.rs  values.rs
src/dicom-lib/src/core/value/specific_character_set/: encoding.rs  iso_2022_ir_13_and_iso_2022_ir_87.rs  iso_2022_ir_6_and_iso_2022_ir_13_and_iso_2022_ir_87.rs  iso_2022_ir_6_and_iso_2022_ir_87.rs  iso_ir_13.rs  iso_ir_192.rs  none.rs
src/dicom-lib/src/core/value/value_representations/: ae.rs  cs.rs  da.rs  fd.rs  is.rs  lo.rs  ob.rs  pn.rs  sh.rs  tm.rs  ui.rs  ul.rs  ur.rs
src/dicom-lib/src/core/value/values/: ae.rs  cs.rs  da.rs  fd.rs  is.rs  lo.rs  ob.rs  pn.rs  sh.rs  tm.rs  ui.rs  ul.rs  ur.rs
src/dicom-lib/src/dictionaries/: sop_class_dictionary.rs  tag_dictionary.rs
src/dicom-lib/src/file/: file_meta_information.rs
src/dicom-lib/src/file/file_meta_information/: meta_data_element.rs
src/dicom-lib/src/network/: command_set.rs  dimse.rs  upper_layer_protocol.rs
src/dicom-lib/src/network/command_set/: command.rs  utils.rs
src/dicom-lib/src/network/command_set/utils/: command_set_converter.rs
src/dicom-lib/src/network/dimse/: c_echo.rs  c_store.rs  enums.rs
src/dicom-lib/src/network/dimse/c_echo/: c_echo_rq.rs  c_echo_rsp.rs
src/dicom-lib/src/network/dimse/c_store/: c_store_rq.rs  c_store_rsp.rs
src/dicom-lib/src/network/dimse/enums/: priority.rs
src/dicom-lib/src/network/service_class/storage/: status.rs
src/dicom-lib/src/network/upper_layer_protocol/: pdu.rs  states.rs  utils.rs
src/dicom-lib/src/network/upper_layer_protocol/pdu/: a_abort.rs  a_associate.rs  a_associate_ac.rs  a_associate_rj.rs  a_associate_rq.rs  a_release_rp.rs  a_release_rq.rs  p_data_tf.rs
src/dicom-lib/src/network/upper_layer_protocol/states/: association_establishment.rs  association_release.rs  data_transfer.rs
src/dicom-lib/src/network/upper_layer_protocol/utils/: command_set_converter.rs
src/dicom-server/: .env.example  Cargo.toml  Makefile
src/dicom-server/src/: args.rs  constants.rs  dimse.rs  log.rs  main.rs
src/dicom-server/src/dicom/: errors.rs  network.rs
src/dicom-server/src/dicom/core/: tag.rs
src/dicom-server/src/dicom/network/: command_set.rs  pdu.rs
src/dicom-server/src/dicom/network/command_set/: command.rs
src/dicom-server/src/dicom/network/dimse/: c_echo.rs
src/dicom-server/src/dicom/network/pdu/: a_associate_ac.rs  a_associate_rq.rs  p_data_tf.rs
src/dicom-server/src/dimse/: c_echo.rs  c_store.rs
src/dicom-server/src/dimse/c_store/: instance_info.rs
src/grpc-server/: .env.example  Cargo.toml  Makefile
src/grpc-server/src/: args.rs  main.rs  startup.rs
src/grpc-server/src/internal/application/: study_search.rs
src/grpc-server/src/internal/domain/: entity.rs  error.rs  repository.rs  value_object.rs
src/grpc-server/src/internal/infrastructure/: repository.rs
src/grpc-server/src/internal/presentation/: study_search.rs
src/proto/: Cargo.toml  Makefile  build.rs
src/proto/proto/oceanus/v1/: study_search.proto
src/proto/src/: lib.rs
src/study-search/: Cargo.toml  Makefile
src/study-search/src/: app.rs  args.rs  grpc_client.rs  main.rs  search_form.rs  study_table.rs
src/web-api/: .env.example  Cargo.toml  Makefile
src/web-api/src/: args.rs  handlers.rs  main.rs  models.rs  startup.rs  utils.rs
src/web-api/src/internal/: application.rs  presentation.rs
src/web-api/src/internal/application/: application_entity.rs  auth.rs  session.rs  user.rs
src/web-api/src/internal/domain/: entity.rs  error.rs  repository.rs  value_object.rs
src/web-api/src/internal/infrastructure/: repository.rs
src/web-api/src/internal/presentation/: error.rs  handler.rs  middleware.rs  util.rs
src/web-ui/: .dockerignore  Dockerfile  Makefile  package-lock.json  package.json  vite.config.ts
src/web-ui/src/lib/: api.ts  constants.ts  utils.ts
src/web-ui/src/lib/stores/: auth.svelte.ts
src/web-ui/src/routes/(authenticated)/: +layout.svelte  +page.svelte
src/web-ui/src/routes/login/: +page.svelte
src/web-ui/static/: robots.txt
(+181 files in other folders)
