[workspace]
resolver = "3"
members = [
    "dicom-server", "web-api",
]

[workspace.package]
version = "0.0.0"
authors = ["Yamato SHINOZUKA <shino0526y@gmail.com>"]
edition = "2024"

[workspace.dependencies]
chrono = "0.4"
phf = { version = "0.13", features = ["macros"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
dicom-lib = { path = "dicom-lib" }

[profile.release]
lto = true
codegen-units = 1
