[workspace]
resolver = "3"
members = [
    "dicom-lib", "dicom-server", "web-api",
    "proto", "grpc-server", "study-search",
]

[workspace.package]
version = "0.0.0"
authors = ["Yamato SHINOZUKA <shino0526y@gmail.com>"]
edition = "2024"

[workspace.dependencies]
chrono = "0.4"
phf = { version = "0.13", features = ["macros"] }
prost = "0.13"
prost-types = "0.13"
thiserror = "2"
tonic = "0.12"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
dicom-lib = { path = "dicom-lib" }
proto = { path = "proto" }

[profile.release]
lto = true
codegen-units = 1
