[package]
name = "dicom-server"
version.workspace = true
authors.workspace = true
description = "DICOM Server"
edition.workspace = true

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
phf.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["local-time"] }
dicom-lib.workspace = true
