[package]
name = "grpc-server"
version.workspace = true
authors.workspace = true
description = "Unified gRPC backend server for Oceanus"
edition.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
prost = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["local-time", "env-filter"] }
proto = { workspace = true }
