[package]
name = "web-api"
version.workspace = true
authors.workspace = true
description = "Web API Server"
edition.workspace = true

[dependencies]
axum = "0.7"
chrono = { workspace = true, features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["local-time", "env-filter"] }
