[package]
name = "web-api"
version.workspace = true
authors.workspace = true
description = "Web API Server"
edition.workspace = true

[dependencies]
argon2 = "0.5"
async-trait = "0.1"
axum = "0.8"
chrono = { workspace = true, features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures = "0.3"
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
thiserror = { workspace = true }
time = "0.3"
tokio = { workspace = true }
tower = "0.5"
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["local-time", "env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v7"] }
dicom-lib = { workspace = true }
